set min-height of answer-bar to prevent jumping

--- a/scss/_pinpoll.scss
+++ b/scss/_pinpoll.scss
@@ -125,6 +125,7 @@ body {
       }
       #poll-body {
          .answer {
+            min-height: 41px;
             opacity: 0.7;
             color: $dark-font;
             &:not(.result-mode) {
